[gd_scene load_steps=13 format=3 uid="uid://r0am7lxu8axj"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_an0iv"]
[ext_resource type="Texture2D" uid="uid://l81otf8ategx" path="res://assets/tilemapv3_1.png" id="2_wwi60"]
[ext_resource type="Texture2D" uid="uid://of26udlvul7g" path="res://assets/targetsv0.png" id="3_3vohr"]
[ext_resource type="Theme" uid="uid://ctbox2lr6umai" path="res://assets/ui_theme.tres" id="4_siju8"]
[ext_resource type="Texture2D" uid="uid://b8ct25j4r2n3j" path="res://assets/robotsv0.png" id="5_fjqjd"]
[ext_resource type="PackedScene" uid="uid://22al3bhe56tx" path="res://user_interface/pause_overlay.tscn" id="6_bi04v"]

[sub_resource type="Gradient" id="Gradient_bjjju"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.681416)
colors = PackedColorArray(0.0666667, 0.137255, 0.286275, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_87i67"]
gradient = SubResource("Gradient_bjjju")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x3dst"]
texture = ExtResource("2_wwi60")
texture_region_size = Vector2i(60, 60)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:0/0 = 0
4:1/0 = 0
4:2/0 = 0
4:3/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_xbaju"]
tile_size = Vector2i(60, 60)
sources/0 = SubResource("TileSetAtlasSource_x3dst")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ty066"]
texture = ExtResource("3_3vohr")
texture_region_size = Vector2i(60, 60)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_kvt6e"]
tile_size = Vector2i(60, 60)
sources/1 = SubResource("TileSetAtlasSource_ty066")

[node name="level" type="Node2D"]
script = ExtResource("1_an0iv")

[node name="TestBackgroundv1" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("GradientTexture1D_87i67")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_xbaju")
cell_quadrant_size = 60
format = 2
layer_0/tile_data = PackedInt32Array(65536, 196608, 3, 131072, 196608, 3, 196608, 196608, 3, 262144, 196608, 3, 1114112, 196608, 3, 1048576, 196608, 3, 983040, 196608, 3, 917504, 196608, 3, 851968, 196608, 3, 786432, 196608, 3, 720896, 196608, 3, 655360, 196608, 3, 589824, 196608, 3, 524288, 196608, 3, 458752, 196608, 3, 393216, 196608, 3, 327680, 196608, 3, 1, 196608, 3, 2, 196608, 3, 3, 196608, 3, 4, 196608, 3, 5, 196608, 3, 6, 196608, 3, 7, 196608, 3, 8, 196608, 3, 9, 196608, 3, 10, 196608, 3, 11, 196608, 3, 12, 196608, 3, 13, 196608, 3, 14, 196608, 3, 15, 196608, 3, 16, 196608, 3, 17, 196608, 3, 65553, 196608, 3, 131089, 196608, 3, 196625, 196608, 3, 262161, 196608, 3, 327697, 196608, 3, 393233, 196608, 3, 458769, 196608, 3, 524305, 196608, 3, 589841, 196608, 3, 655377, 196608, 3, 720913, 196608, 3, 786449, 196608, 3, 851985, 196608, 3, 917521, 196608, 3, 983057, 196608, 3, 1048593, 196608, 3, 1114129, 196608, 3, 1114128, 196608, 3, 1114127, 196608, 3, 1114126, 196608, 3, 1114125, 196608, 3, 1114124, 196608, 3, 1114123, 196608, 3, 1114122, 196608, 3, 1114121, 196608, 3, 1114120, 196608, 3, 1114119, 196608, 3, 1114118, 196608, 3, 1114117, 196608, 3, 1114116, 196608, 3, 1114115, 196608, 3, 1114114, 196608, 3, 1114113, 196608, 3, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 983048, 0, 0, 917512, 0, 0, 851976, 0, 0, 720904, 0, 0, 786440, 0, 0, 655368, 0, 0, 589832, 196608, 3, 524296, 196608, 3, 524297, 196608, 3, 589833, 196608, 3, 65544, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 196617, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0, 851978, 0, 0, 917514, 0, 0, 983050, 0, 0, 1048586, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 786443, 0, 0, 851979, 0, 0, 917515, 0, 0, 983051, 0, 0, 1048587, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 786444, 0, 0, 851980, 0, 0, 917516, 0, 0, 983052, 0, 0, 1048588, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 786445, 0, 0, 851981, 0, 0, 917517, 0, 0, 983053, 0, 0, 1048589, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 786446, 0, 0, 851982, 0, 0, 917518, 0, 0, 983054, 0, 0, 1048590, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 786447, 0, 0, 851983, 0, 0, 917519, 0, 0, 983055, 0, 0, 1048591, 0, 0, 786448, 0, 0, 851984, 0, 0, 917520, 0, 0, 983056, 0, 0, 1048592, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, 851970, 0, 0, 917506, 0, 0, 983042, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 851971, 0, 0, 917507, 0, 0, 983043, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 0, 0, 851972, 0, 0, 917508, 0, 0, 983044, 0, 0, 655365, 0, 0, 720901, 0, 0, 786437, 0, 0, 851973, 0, 0, 917509, 0, 0, 983045, 0, 0, 655366, 0, 0, 720902, 0, 0, 786438, 0, 0, 851974, 0, 0, 917510, 0, 0, 983046, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0, 917511, 0, 0, 983047, 0, 0, 655369, 0, 0, 720905, 0, 0, 786441, 0, 0, 851977, 0, 0, 917513, 0, 0, 983049, 0, 0, 1048585, 0, 0, 524289, 0, 0, 589825, 0, 0, 524290, 0, 0, 589826, 0, 0, 524291, 0, 0, 589827, 0, 0, 524292, 0, 0, 589828, 0, 0, 524293, 0, 0, 589829, 0, 0, 524294, 0, 0, 589830, 0, 0, 524295, 0, 0, 0, 196608, 3, 589831, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 196615, 0, 0, 196614, 0, 0, 196616, 0, 0, 262152, 0, 0, 262151, 0, 0, 262150, 0, 0, 262153, 0, 0, 327687, 0, 0, 327688, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 327689, 0, 0, 458760, 0, 0, 458761, 0, 0, 458759, 0, 0, 458758, 0, 0, 327686, 0, 0)

[node name="TargetTiles" type="TileMap" parent="."]
tile_set = SubResource("TileSet_kvt6e")
cell_quadrant_size = 60
format = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 1080.0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("4_siju8")

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TargetsLeftContainer" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="TargetsLeftLabel" type="Label" parent="MarginContainer/VBox/TargetsLeftContainer"]
layout_mode = 2
text = "Targets Left: "

[node name="TargetsLeft" type="Label" parent="MarginContainer/VBox/TargetsLeftContainer"]
layout_mode = 2

[node name="MovesMadeContainer" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="MovesMadeLabel" type="Label" parent="MarginContainer/VBox/MovesMadeContainer"]
layout_mode = 2
text = "Moves Made: "

[node name="MovesMade" type="Label" parent="MarginContainer/VBox/MovesMadeContainer"]
layout_mode = 2
text = "0"

[node name="SelectedFigurineContainer" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="SelectedFigurineLabel" type="Label" parent="MarginContainer/VBox/SelectedFigurineContainer"]
layout_mode = 2
text = "Selected Figurine:"

[node name="Control" type="Control" parent="MarginContainer/VBox/SelectedFigurineContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBox/SelectedFigurineContainer/Control"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
color = Color(0.890196, 0.768627, 0.517647, 1)

[node name="SelectedFigurine" type="Sprite2D" parent="MarginContainer/VBox/SelectedFigurineContainer/Control"]
position = Vector2(30, 30)
texture = ExtResource("5_fjqjd")
hframes = 4
vframes = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="CongratulationsLabel" type="Label" parent="MarginContainer/VBox/MarginContainer"]
layout_mode = 2
text = "Congratulations,
you solved this puzzle!"
horizontal_alignment = 1

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="PauseOverlay" parent="UserInterface" instance=ExtResource("6_bi04v")]
visible = false
